tests/NormalTests/paczka1/small_fuzzy/86238214.err
Error in line 5: 0ZzXj6 S609 34,7
Error in line 8: Zg6d S609 18,0
